@@ -822,21 +822,23 @@ class CItem extends CItemGeneral {
 	}
 
 	/**
-	 * Items data validation.
+	 * Check item data and set flags field.
 	 *
-	 * @param array $items
-	 * @param bool $update checks for updating items
+	 * @param array $items passed by reference
+	 * @param bool  $update
+	 *
+	 * @return void
 	 */
-	protected function checkInput(array &$items, $update=false) {
-		// validate if everything is ok with 'item->inventory fields' linkage
-		self::validateInventoryLinks($items, $update);
-		parent::checkInput($items, $update);
-
+	protected function checkInput(array &$items, $update = false) {
 		// add the values that cannot be changed, but are required for further processing
-		// they must be added after calling parent::checkInput() because it will unset any existing system field
 		foreach ($items as &$item) {
 			$item['flags'] = ZBX_FLAG_DISCOVERY_NORMAL;
 		}
+		unset($item);
+
+		// validate if everything is ok with 'item->inventory fields' linkage
+		self::validateInventoryLinks($items, $update);
+		parent::checkInput($items, $update);
 	}
 
 	/**
